login.css
@charset "utf-8";
/* CSS Document */

html, body {
	margin:0;
}

#backdrop {
	height:185px;
	width:100%;
	position:absolute;
	background-color:#f86800;
	z-index:-1;
}

#top {
	height:360px;
	margin:0 auto;
	text-align:center;
}

#imageContainer {
	width:129px;
	height:129px;
	margin-top:96px;
	display:inline-block;
	border-radius:50%;
	border:5px solid #fa8028;
	overflow:hidden;
}

#userImage {
	width:129px;
	height:129px;
}

#bottom {
	text-align:center;
}

#inputContainer {
	width:calc(100% - 128px);
	height:40px;
	border-radius:5px;
	border:1px solid #bbbbbb;
	margin:0 auto;
}

#inputWrapper {
	height:14px;
	width:100%;
	margin:13px 12px 13px 12px;;
}

#userInputIcon {
	height:14px;
	float:left;
}

#userInput {
	float:left;
	margin-left:13px;
	height:14px;
	font-size:14px;
	padding:0;
	border:none;
	width:calc(100% - 61px);
	outline:none;
}

#buttonContainer {
	margin-top:47px;
	margin-bottom:153px;
}

#submitButton {
	height:40px;
	width: calc(100% - 128px);
	background-color:#f16703;
	border-radius:5px;
	outline:none;
	border:none;
	color:white;
	font-size:20px;
	letter-spacing:17px;
}

.unpressed {
	box-shadow:0 3px 0 #d05800;
	margin-bottom:3px;
	margin-top:0;
}

.pressed {
	box-shadow:none;
	margin-top:3px;
	margin-bottom:0;
}

